<resources>
    <string name="app_name">Calcul Mental</string>
    <string name="calcul_mental">Calcul Mental</string>
    <string name="jouer">Jouer</string>
    <string name="scoreboard">Tableau des scores</string>
    <string name="valide">Valider</string>
    <string name="reponse">Réponse :</string>
    <string name="correcte">Correcte</string>
    <string name="faux">Faux</string>
    <string name="bonnes_reponses">Bonnes réponses :</string>
    <string name="suivant">suivant</string>
    <string name="effacer">effacer</string>
    <string name="menu_principal">Menu Principal</string>
    <string name="bien_joue">Bien joué !</string>
    <string name="bof">Bof, tu peux mieux faire…</string>
    <string name="pas_terrible"> Pas terrible…</string>
    <string name="aucun_resultat">Vous n\'avez saisie aucune valeur !</string>
    <string name="mauvaises_rep">Mauvaises réponses :</string>
    <string name="a_propos">À propos</string>
    <string name="tatarkovic_alexis" translatable="false">TATARKOVIC Alexis</string>
    <string name="chretien_adrien" translatable="false">CHRETIEN Adrien</string>
    <string name="groupe_4">Groupe 4</string>
    <string name="langages">Langues disponibles : Français, Anglais</string>
    <string name="nombrescore">Nombre de scores enregistrés dans la base :</string>
    <string name="enregistrer">s\'enregistrer</string>
    <string name="pseudonyme">Pseudonyme :</string>
    <string name="pseudo">Pseudo</string>
    <string name="aucun_pseudo">Vous n\'avez saisie aucun pseudo !</string>
    <string name="register_score">Votre score :</string>
    <string name="titre_bonus" translatable="false">Bonus</string>
    <string name="bonus">- Ajout d\'un bouton pour retourner au menu principal\n
        - Ajout d\'une page de fin qui diffère selon le résultat du joueur\n
        - Ajout d\'un logo d\'application et d\'un background\n
        - Pas de changement de page entre les calculs\n
        - Page d\'enregistrement du score à la fin d\'une partie</string>
</resources>