<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.ActivityAPropos">

    <TextView
        android:id="@+id/textview_apropos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/a_propos"
        android:textColor="@color/white"
        android:textSize="40dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <ImageButton
        android:id="@+id/btn_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/textview_apropos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/home" />

    <TextView
        android:id="@+id/tw_alexis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tatarkovic_alexis"
        android:textStyle="italic"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_apropos"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/tw_adrien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chretien_adrien"
        android:textSize="20dp"
        android:textStyle="italic"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_alexis"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/tw_groupe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/groupe_4"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_adrien"
        app:layout_constraintVertical_bias="0.050000012" />

    <TextView
        android:id="@+id/tw_langues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/langages"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_groupe"
        app:layout_constraintVertical_bias="0.01999998" />

    <TextView
        android:id="@+id/bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/bonus"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_langues"
        app:layout_constraintVertical_bias="0.58000004" />

    <TextView
        android:id="@+id/titre_bonus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/titre_bonus"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bonus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_langues"
        app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>