<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/niveau1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/jouer"
        android:textColor="@color/white"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageBien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <TextView
        android:id="@+id/score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bonnes_reponses"
        android:textColor="@color/green"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/imageBien"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/niveau1"
        app:layout_constraintVertical_bias="0.25" />

    <Button
        android:id="@+id/menu_principal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu_principal"
        android:backgroundTint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBien" />

    <ImageView
        android:id="@+id/imageBien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/septcorr" />

    <ImageView
        android:id="@+id/imageMoyen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:srcCompat="@drawable/quatrecorr"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <ImageView
        android:id="@+id/imagePasBien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39"
        app:srcCompat="@drawable/zerocorr"
        />
    <TextView
        android:id="@+id/bien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bien_joue"
        android:textColor="@color/white"
        android:textSize="50dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/menu_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBien" />

    <TextView
        android:id="@+id/moyen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bof"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/menu_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBien" />

    <TextView
        android:id="@+id/pasBien"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pas_terrible"
        android:textColor="@color/white"
        android:visibility="invisible"
        android:textSize="30dp"
        app:layout_constraintBottom_toTopOf="@+id/menu_principal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageBien" />
</androidx.constraintlayout.widget.ConstraintLayout>